@@ -8,12 +8,15 @@ import static akka.Done.done;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import akka.Done;
+import akka.javasdk.agent.AgentRegistry;
+import akka.javasdk.agent.MemoryFilter;
 import akka.javasdk.agent.SessionHistory;
 import akka.javasdk.agent.SessionMemoryEntity;
 import akka.javasdk.agent.SessionMemoryEntity.AddInteractionCmd;
 import akka.javasdk.agent.SessionMessage;
 import akka.javasdk.agent.SessionMessage.AiMessage;
 import akka.javasdk.agent.SessionMessage.UserMessage;
+import akka.javasdk.impl.agent.AgentRegistryImpl;
 import akka.javasdk.testkit.EventSourcedResult;
 import akka.javasdk.testkit.EventSourcedTestKit;
 import com.typesafe.config.Config;
@@ -21,20 +24,24 @@ import com.typesafe.config.ConfigFactory;
 import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import org.junit.jupiter.api.Test;
 
 public class SessionMemoryEntityTest {
 
   private static final String COMPONENT_ID = "test-component";
   private static final Config config = ConfigFactory.load();
+  private static final AgentRegistry agentRegistryEmpty = AgentRegistryImpl.fromJavaSet(Set.of());
 
   private final SessionMemoryEntity.GetHistoryCmd emptyGetHistory =
-      new SessionMemoryEntity.GetHistoryCmd(Optional.empty());
+      new SessionMemoryEntity.GetHistoryCmd();
 
   @Test
   public void shouldAddMessageToHistory() {
     // given
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var timestamp = Instant.now();
     String userMsg = "Hello, how are you?";
     String aiMsg = "I'm fine, thanks for asking!";
@@ -79,7 +86,9 @@ public class SessionMemoryEntityTest {
   @Test
   public void shouldAddMultipleMessagesToHistory() {
     // given
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var timestamp = Instant.now();
     String userMsg1 = "Hello";
     String aiMsg1 = "Hi there!";
@@ -122,7 +131,9 @@ public class SessionMemoryEntityTest {
   @Test
   public void shouldBeCompactable() {
     // given
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var timestamp = Instant.now();
 
     var userMessage1 = new UserMessage(timestamp, "Hello", COMPONENT_ID);
@@ -167,7 +178,9 @@ public class SessionMemoryEntityTest {
   @Test
   public void shouldHandleConcurrentUpdatesWhenCompacting() {
     // given
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var timestamp = Instant.now();
 
     var userMessage1 = new UserMessage(timestamp, "Hello", COMPONENT_ID);
@@ -221,7 +234,9 @@ public class SessionMemoryEntityTest {
   @Test
   public void shouldBeDeletable() {
     // given
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var timestamp = Instant.now();
     String userMsg = "Hello";
     String aiMsg = "Hi there!";
@@ -242,7 +257,7 @@ public class SessionMemoryEntityTest {
     // Check event - ignoring timestamp comparison
     var events = clearResult.getAllEvents();
     assertThat(events).hasSize(1);
-    assertThat(events.get(0)).isInstanceOf(SessionMemoryEntity.Event.Deleted.class);
+    assertThat(events.getFirst()).isInstanceOf(SessionMemoryEntity.Event.Deleted.class);
 
     // when retrieving history after clearing
     EventSourcedResult<SessionHistory> historyResult =
@@ -255,7 +270,9 @@ public class SessionMemoryEntityTest {
   @Test
   public void shouldGetEmptyHistoryWhenNoMessagesAdded() {
     // given
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
 
     // when
     EventSourcedResult<SessionHistory> historyResult =
@@ -268,7 +285,9 @@ public class SessionMemoryEntityTest {
   @Test
   public void shouldRemoveOldestMessagesWhenLimitIsReached() {
     // given
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var timestamp = Instant.now();
 
     // Calculate the total bytes needed for each message
@@ -312,7 +331,9 @@ public class SessionMemoryEntityTest {
   @Test
   public void shouldMaintainCorrectSizeAfterMultipleOperations() {
     // given
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var timestamp = Instant.now();
 
     // Calculate the total bytes needed for each message
@@ -385,7 +406,9 @@ public class SessionMemoryEntityTest {
   @Test
   public void shouldRejectInvalidBufferSize() {
     // given
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var invalidBuffer = new SessionMemoryEntity.LimitedWindow(0);
 
     // when
@@ -399,7 +422,9 @@ public class SessionMemoryEntityTest {
 
   @Test
   public void shouldSkipWhenFirstMessageGreaterBySize() {
-    var testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var timestamp = Instant.now();
     // Create a message larger than the buffer
     String largeUserMsg = "A".repeat(100);
@@ -428,7 +453,9 @@ public class SessionMemoryEntityTest {
   public void shouldReturnOnlyLastNMessages() {
     // Create test kit with the configuration
     EventSourcedTestKit<SessionMemoryEntity.State, SessionMemoryEntity.Event, SessionMemoryEntity>
-        testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+        testKit =
+            EventSourcedTestKit.of(
+                (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
     var timestamp = Instant.now();
 
     // Add several interactions
@@ -464,7 +491,9 @@ public class SessionMemoryEntityTest {
   @Test
   public void shouldReturnEmptyHistoryWithLastN() {
     EventSourcedTestKit<SessionMemoryEntity.State, SessionMemoryEntity.Event, SessionMemoryEntity>
-        testKit = EventSourcedTestKit.of((context) -> new SessionMemoryEntity(config, context));
+        testKit =
+            EventSourcedTestKit.of(
+                (context) -> new SessionMemoryEntity(config, context, agentRegistryEmpty));
 
     var lastN = 4;
     EventSourcedResult<SessionHistory> result =
@@ -473,5 +502,399 @@ public class SessionMemoryEntityTest {
             .invoke(new SessionMemoryEntity.GetHistoryCmd(Optional.of(lastN)));
 
     assertThat(result.getReply().messages()).isEmpty();
+  }
+
+  private AgentRegistryImpl.AgentDetails agentDetails(String componentId) {
+    return agentDetails(componentId, "");
+  }
+
+  private AgentRegistryImpl.AgentDetails agentDetails(String componentId, String role) {
+    return new AgentRegistryImpl.AgentDetails(componentId, "", "", role, null);
+  }
+
+  @Test
+  public void shouldFilterMessagesIncludingFromAgentId() {
+
+    String componentId1 = "agent-1";
+    String componentId2 = "agent-2";
+    String componentId3 = "agent-3";
+
+    var agentDetails =
+        Set.of(agentDetails(componentId1), agentDetails(componentId2), agentDetails(componentId3));
+    // given
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) ->
+                new SessionMemoryEntity(
+                    config, context, AgentRegistryImpl.fromJavaSet(agentDetails)));
+    var timestamp = Instant.now();
+
+    // Add messages from different agents
+    var userMessage1 = new UserMessage(timestamp, "Message from agent 1", componentId1);
+    var aiMessage1 = new AiMessage(timestamp, "Response from agent 1", componentId1);
+
+    var userMessage2 =
+        new UserMessage(timestamp.plusMillis(1), "Message from agent 2", componentId2);
+    var aiMessage2 = new AiMessage(timestamp.plusMillis(1), "Response from agent 2", componentId2);
+
+    var userMessage3 =
+        new UserMessage(timestamp.plusMillis(2), "Message from agent 3", componentId3);
+    var aiMessage3 = new AiMessage(timestamp.plusMillis(2), "Response from agent 3", componentId3);
+
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage1, aiMessage1));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage2, aiMessage2));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage3, aiMessage3));
+
+    // when - filterSupplier to include only messages from agent-1
+    var filterSupplier = MemoryFilter.includeFromAgentId(componentId1);
+    EventSourcedResult<SessionHistory> result =
+        testKit
+            .method(SessionMemoryEntity::getHistory)
+            .invoke(new SessionMemoryEntity.GetHistoryCmd(filterSupplier.get()));
+
+    // then - only messages from agent-1 should be present
+    assertThat(result.getReply().messages()).containsExactly(userMessage1, aiMessage1);
+  }
+
+  @Test
+  public void shouldFilterMessagesIncludingIdAndRole() {
+
+    String componentId1 = "agent-1";
+    String componentId2 = "agent-2";
+    String componentId3 = "agent-3";
+    String role3 = "worker";
+    var agentDetails =
+        Set.of(
+            agentDetails(componentId1),
+            agentDetails(componentId2),
+            agentDetails(componentId3, role3));
+    // given
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) ->
+                new SessionMemoryEntity(
+                    config, context, AgentRegistryImpl.fromJavaSet(agentDetails)));
+    var timestamp = Instant.now();
+
+    // Add messages from different agents
+    var userMessage1 = new UserMessage(timestamp, "Message from agent 1", componentId1);
+    var aiMessage1 = new AiMessage(timestamp, "Response from agent 1", componentId1);
+
+    var userMessage2 =
+        new UserMessage(timestamp.plusMillis(1), "Message from agent 2", componentId2);
+    var aiMessage2 = new AiMessage(timestamp.plusMillis(1), "Response from agent 2", componentId2);
+
+    var userMessage3 =
+        new UserMessage(timestamp.plusMillis(2), "Message from agent 3", componentId3);
+    var aiMessage3 =
+        new AiMessage(timestamp.plusMillis(2), "Response from agent 3", componentId3, List.of());
+
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage1, aiMessage1));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage2, aiMessage2));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage3, aiMessage3));
+
+    // when - filterSupplier to include only messages from agent-1
+    var filterSupplier = MemoryFilter.includeFromAgentId(componentId1).includeFromAgentRole(role3);
+    EventSourcedResult<SessionHistory> result =
+        testKit
+            .method(SessionMemoryEntity::getHistory)
+            .invoke(new SessionMemoryEntity.GetHistoryCmd(filterSupplier.get()));
+
+    // then - only messages from agent-2 and agent-3 should be present
+    assertThat(result.getReply().messages())
+        .containsExactly(userMessage1, aiMessage1, userMessage3, aiMessage3);
+  }
+
+  @Test
+  public void shouldFilterMessagesExcludingFromAgentId() {
+    String componentId1 = "agent-1";
+    String componentId2 = "agent-2";
+    String componentId3 = "agent-3";
+
+    var agentDetails =
+        Set.of(agentDetails(componentId1), agentDetails(componentId2), agentDetails(componentId3));
+    // given
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) ->
+                new SessionMemoryEntity(
+                    config, context, AgentRegistryImpl.fromJavaSet(agentDetails)));
+    var timestamp = Instant.now();
+
+    // Add messages from different agents
+    var userMessage1 = new UserMessage(timestamp, "Message from agent 1", componentId1);
+    var aiMessage1 = new AiMessage(timestamp, "Response from agent 1", componentId1);
+
+    var userMessage2 =
+        new UserMessage(timestamp.plusMillis(1), "Message from agent 2", componentId2);
+    var aiMessage2 = new AiMessage(timestamp.plusMillis(1), "Response from agent 2", componentId2);
+
+    var userMessage3 =
+        new UserMessage(timestamp.plusMillis(2), "Message from agent 3", componentId3);
+    var aiMessage3 = new AiMessage(timestamp.plusMillis(2), "Response from agent 3", componentId3);
+
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage1, aiMessage1));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage2, aiMessage2));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage3, aiMessage3));
+
+    // when - filterSupplier to exclude messages from agent-2
+    var filterSupplier = MemoryFilter.excludeFromAgentId(componentId2);
+    EventSourcedResult<SessionHistory> result =
+        testKit
+            .method(SessionMemoryEntity::getHistory)
+            .invoke(new SessionMemoryEntity.GetHistoryCmd(filterSupplier.get()));
+
+    // then - messages from agent-1 and agent-3 should be present
+    assertThat(result.getReply().messages())
+        .containsExactly(userMessage1, aiMessage1, userMessage3, aiMessage3);
+  }
+
+  @Test
+  public void shouldFilterMessagesIncludingFromAgentRole() {
+
+    String componentId1 = "agent-1";
+    String componentId2 = "agent-2";
+    String componentId3 = "agent-3";
+    String role1 = "summarizer";
+    String role2 = "translator";
+    var agentDetails =
+        Set.of(
+            agentDetails(componentId1, role1),
+            agentDetails(componentId2, role2),
+            agentDetails(componentId3));
+
+    // given
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) ->
+                new SessionMemoryEntity(
+                    config, context, AgentRegistryImpl.fromJavaSet(agentDetails)));
+    var timestamp = Instant.now();
+
+    // Add messages from different agent roles
+    var userMessage1 = new UserMessage(timestamp, "Message from summarizer", componentId1);
+    var aiMessage1 = new AiMessage(timestamp, "Response from summarizer", componentId1, List.of());
+
+    var userMessage2 =
+        new UserMessage(timestamp.plusMillis(1), "Message from translator", componentId2);
+    var aiMessage2 =
+        new AiMessage(timestamp.plusMillis(1), "Response from translator", COMPONENT_ID, List.of());
+
+    var userMessage3 =
+        new UserMessage(timestamp.plusMillis(2), "Message from analyzer", componentId3);
+    var aiMessage3 =
+        new AiMessage(timestamp.plusMillis(2), "Response from analyzer", componentId3, List.of());
+
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage1, aiMessage1));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage2, aiMessage2));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage3, aiMessage3));
+
+    // when - filter to include only messages from a summarizer role
+    var filterSupplier = MemoryFilter.includeFromAgentRole(role1);
+    EventSourcedResult<SessionHistory> result =
+        testKit
+            .method(SessionMemoryEntity::getHistory)
+            .invoke(new SessionMemoryEntity.GetHistoryCmd(filterSupplier.get()));
+
+    // then - only messages from a summarizer role should be present
+    assertThat(result.getReply().messages()).containsExactly(userMessage1, aiMessage1);
+  }
+
+  @Test
+  public void shouldFilterMessagesExcludingFromAgentRole() {
+
+    String componentId1 = "agent-1";
+    String componentId2 = "agent-2";
+    String componentId3 = "agent-3";
+    String role1 = "summarizer";
+    String role2 = "translator";
+    var agentDetails =
+        Set.of(
+            agentDetails(componentId1, role1),
+            agentDetails(componentId2, role2),
+            agentDetails(componentId3));
+    // given
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) ->
+                new SessionMemoryEntity(
+                    config, context, AgentRegistryImpl.fromJavaSet(agentDetails)));
+    var timestamp = Instant.now();
+
+    // Add messages from different agent roles
+    var userMessage1 = new UserMessage(timestamp, "Message from summarizer", componentId1);
+    var aiMessage1 = new AiMessage(timestamp, "Response from summarizer", componentId1, List.of());
+
+    var userMessage2 =
+        new UserMessage(timestamp.plusMillis(1), "Message from translator", componentId2);
+    var aiMessage2 =
+        new AiMessage(timestamp.plusMillis(1), "Response from translator", componentId2, List.of());
+
+    var userMessage3 =
+        new UserMessage(timestamp.plusMillis(2), "Message from analyzer", componentId3);
+    var aiMessage3 =
+        new AiMessage(timestamp.plusMillis(2), "Response from analyzer", componentId3, List.of());
+
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage1, aiMessage1));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage2, aiMessage2));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage3, aiMessage3));
+
+    // when - filterSupplier to exclude messages from a translator role
+    var filterSupplier = MemoryFilter.excludeFromAgentRole(role2);
+    EventSourcedResult<SessionHistory> result =
+        testKit
+            .method(SessionMemoryEntity::getHistory)
+            .invoke(new SessionMemoryEntity.GetHistoryCmd(filterSupplier.get()));
+
+    // then - messages from summarizer and analyzer roles should be present
+    assertThat(result.getReply().messages())
+        .containsExactly(userMessage1, aiMessage1, userMessage3, aiMessage3);
+  }
+
+  @Test
+  public void shouldFilterMessagesExcludingIdAndRole() {
+    String componentId1 = "agent-1";
+    String componentId2 = "agent-2";
+    String componentId3 = "agent-3";
+    String role2 = "worker";
+
+    var agentDetails =
+        Set.of(
+            agentDetails(componentId1),
+            agentDetails(componentId2, role2),
+            agentDetails(componentId3));
+
+    // given
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) ->
+                new SessionMemoryEntity(
+                    config, context, AgentRegistryImpl.fromJavaSet(agentDetails)));
+    var timestamp = Instant.now();
+
+    // Add messages from different agents
+    var userMessage1 = new UserMessage(timestamp, "Message from agent 1", componentId1);
+    var aiMessage1 = new AiMessage(timestamp, "Response from agent 1", componentId1);
+
+    var userMessage2 =
+        new UserMessage(timestamp.plusMillis(1), "Message from agent 2", componentId2);
+    var aiMessage2 =
+        new AiMessage(timestamp.plusMillis(1), "Response from agent 2", componentId2, List.of());
+
+    var userMessage3 =
+        new UserMessage(timestamp.plusMillis(2), "Message from agent 3", componentId3);
+    var aiMessage3 = new AiMessage(timestamp.plusMillis(2), "Response from agent 3", componentId3);
+
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage1, aiMessage1));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage2, aiMessage2));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage3, aiMessage3));
+
+    // when - filterSupplier to include only messages from agent-1
+    var filterSupplier = MemoryFilter.excludeFromAgentId(componentId1).excludeFromAgentRole(role2);
+
+    EventSourcedResult<SessionHistory> result =
+        testKit
+            .method(SessionMemoryEntity::getHistory)
+            .invoke(new SessionMemoryEntity.GetHistoryCmd(filterSupplier.get()));
+
+    // then - only messages from agent-2 should be present
+    assertThat(result.getReply().messages()).containsExactly(userMessage3, aiMessage3);
+  }
+
+  @Test
+  public void shouldCombineFilterWithLastNMessages() {
+
+    String componentId1 = "agent-1";
+    String componentId2 = "agent-2";
+
+    var agentDetails = Set.of(agentDetails(componentId1), agentDetails(componentId2));
+
+    // given
+    var testKit =
+        EventSourcedTestKit.of(
+            (context) ->
+                new SessionMemoryEntity(
+                    config, context, AgentRegistryImpl.fromJavaSet(agentDetails)));
+    var timestamp = Instant.now();
+
+    // Add multiple messages from different agents
+    var userMessage1 = new UserMessage(timestamp, "Message 1 from agent 1", componentId1);
+    var aiMessage1 = new AiMessage(timestamp, "Response 1 from agent 1", componentId1);
+
+    var userMessage2 =
+        new UserMessage(timestamp.plusMillis(1), "Message from agent 2", componentId2);
+    var aiMessage2 = new AiMessage(timestamp.plusMillis(1), "Response from agent 2", componentId2);
+
+    var userMessage3 =
+        new UserMessage(timestamp.plusMillis(2), "Message 2 from agent 1", componentId1);
+    var aiMessage3 =
+        new AiMessage(timestamp.plusMillis(2), "Response 2 from agent 1", componentId1);
+
+    var userMessage4 =
+        new UserMessage(timestamp.plusMillis(3), "Message 3 from agent 1", componentId1);
+    var aiMessage4 =
+        new AiMessage(timestamp.plusMillis(3), "Response 3 from agent 1", componentId1);
+
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage1, aiMessage1));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage2, aiMessage2));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage3, aiMessage3));
+    testKit
+        .method(SessionMemoryEntity::addInteraction)
+        .invoke(new AddInteractionCmd(userMessage4, aiMessage4));
+
+    // when - filterBuild to include only messages from agent-1 AND limit to last 2 messages
+    var filterBuild = MemoryFilter.includeFromAgentId(componentId1);
+    EventSourcedResult<SessionHistory> result =
+        testKit
+            .method(SessionMemoryEntity::getHistory)
+            .invoke(new SessionMemoryEntity.GetHistoryCmd(Optional.of(2), filterBuild.get()));
+
+    // then - only the last 2 messages from agent-1 should be present
+    // The filtered list would be: [userMessage1, aiMessage1, userMessage3, aiMessage3,
+    // userMessage4, aiMessage4]
+    // Taking the last 2: [userMessage4, aiMessage4]
+    assertThat(result.getReply().messages()).containsExactly(userMessage4, aiMessage4);
   }
 }
